--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -1,29 +1,17 @@
 <div class="page-header">
   <div class="row">
-    <h3><%= Faker::Lorem.paragraph %></h3>
+    <h3><%= simple_format @top, {}, wrapper_tag: 'div' %></h3>
   </div>
   <div class="offset5 span2">
     <%= button_to 'Рекомендовать специалиста!', new_advise_path, method: :get, class: 'btn btn-warning btn-large' %>
   </div>
 </div>
 <div class="row-fluid">
-  <div class="span4">
-    <p>
-      <%= Faker::Lorem.paragraphs(2) %>
-    </p>
-  </div>
-  <div class="span4">
-    <p>
-      <%= Faker::Lorem.paragraphs(2) %>
-    </p>
-  </div>
-  <div class="span4">
-    <p>
-      <%= Faker::Lorem.paragraphs(2) %>
-    </p>
-  </div>
+      <%= simple_format @left_column, {class: 'marketing span4 align_justify'}, wrapper_tag: "div" %>
+      <%= simple_format @center_column, {class: 'marketing span4 align_justify'}, wrapper_tag: "div" %>
+      <%= simple_format @right_column, {class: 'marketing span4 align_justify'}, wrapper_tag: "div" %>
 </div>
-
+<p></p>
 <%# cache @category do %>
 <div class="row-fluid">
   <%= render :partial => 'items' %>
