--- a/app/views/layouts/_admin_navbar.html.erb
+++ b/app/views/layouts/_admin_navbar.html.erb
@@ -14,6 +14,7 @@
         <li><%= link_to "Рекомендации", admin_advises_path %></li>
         <li><%= link_to "Комментарии", admin_comments_path %></li>
         <li><%= link_to "Специальности", admin_categories_path %></li>
+        <li><%= link_to "Страницы", admin_pages_path %></li>
         <li><%= link_to "Роли", admin_roles_path %></li>
       </ul>
       <ul class="nav pull-right">
